--- a/src/kernel/kernel_target.cfg
+++ b/src/kernel/kernel_target.cfg
@@ -2,7 +2,7 @@ MEMORY {
     ZPIO:      start =   $00, size =   $0F, type   = rw, define = yes;
     ZPK:       start =   $10, size =   $C0, type   = rw, define = yes;
     ZP:        start =   $D0, size =   $2F, type   = rw, define = yes;
-    RAM:       start =  $200, size = $FE00, define = yes, file = "kernel_ram_image.bin";
+    RAM:       start =  $200, size = $FE00, define = yes, file = %O, fill = yes;
 }
 
 SEGMENTS {
