--- a/src/kernel/kernel_target.cfg
+++ b/src/kernel/kernel_target.cfg
@@ -1,37 +1,21 @@
 MEMORY {
-    ZPIO:      start =   $00, size =   $0F, type   = rw, define = yes;
-    ZPK:       start =   $10, size =   $C0, type   = rw, define = yes;
-    ZP:        start =   $D0, size =   $2F, type   = rw, define = yes;
-    RAM:       start =  $200, size = $FE00, define = yes, file = %O, fill = yes;
+    ZP:      start = $00,   size = $100, type = rw, define = yes;
+    BP0:     start = $0000, size = $4000, type = rw, define = yes;
+    BP2:     start = $8000, size = $4000, type = rw, define = yes;
+    BP1:     start = $4000, size = $4000, type = rw, define = yes;
+    KMEM:    start = $C000, size = $3800, type = rw, define = yes;
+    VIA:     start = $F800, size = $0010, type = rw, define = yes;
+    DMA:     start = $F810, size = $00E9, type = rw, define = yes;
+    VECTORS: start = $FFFA, size = $0006, type = ro, define = yes;
 }
 
 SEGMENTS {
-    ZP_PORTS:  load = ZPIO,  type = zp,  define   = yes;
-    ZP_KERNEL: load = ZPK,   type = zp,  define   = yes;
-    ZEROPAGE:  load = ZP,    type = zp,  define   = yes;
-    DATA:      load = RAM,   type = rw,  define   = yes, run = RAM;
-    BSS:       load = RAM,   type = bss, define   = yes;
-    HEAP:      load = RAM,   type = bss, optional = yes;
-
-    STARTUP:  load = RAM, type = ro;
-    ONCE:     load = RAM, type = ro,  optional = yes;
-    CODE:     load = RAM, type = ro;
-    RODATA:   load = RAM, type = ro;
-    VECTORS:  load = RAM, type = ro,  start    = $FFFA;
-}
-
-FEATURES {
-    CONDES:    segment = STARTUP,
-               type    = constructor,
-               label   = __CONSTRUCTOR_TABLE__,
-               count   = __CONSTRUCTOR_COUNT__;
-    CONDES:    segment = STARTUP,
-               type    = destructor,
-               label   = __DESTRUCTOR_TABLE__,
-               count   = __DESTRUCTOR_COUNT__;
-}
-
-SYMBOLS {
-    # Define the stack size for the application
-    __STACKSIZE__:  value = $0200, type = weak;
+    ZEROPAGE: load = ZP,    type = zp, define = yes;
+    BP0:      load = BP0,   type = rw;
+    BP1:      load = BP1,   type = rw;
+    BP2:      load = BP2,   type = rw;
+    KMEM:     load = KMEM,  type = rw;
+    VIA:      load = VIA,   type = rw;
+    DMA:      load = DMA,   type = rw;
+    VECTORS:  load = VECTORS,   type = ro;
 }
