Added some PIC build files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,59 @@ fp-info-cache
 # Autorouter files (exported from Pcbnew)
 *.dsn
 *.ses
+
+# MPLAB X IDE and PIC microcontroller build files
+# Build directories
+_build/
+build/
+dist/
+debug/
+release/
+out/
+
+# MPLAB X IDE project files
+*.X/nbproject/private/
+*.X/nbproject/Package-*.bash
+*.X/build/
+*.X/nbbuild/
+*.X/dist/
+*.X/nbdist/
+*.X/.nb-gradle/
+
+# PIC microcontroller specific files
+*.p1
+*.lst
+*.sym
+*.obj
+*.o
+*.d
+*.i
+*.rlf
+*.sdb
+*.mcp
+*.mcw
+*.hex
+*.cof
+*.elf
+*.map
+*.err
+*.tre
+*.xtr
+
+# MPLAB X IDE cache and temporary files
+.cache/
+*.cache
+*.tmp
+*.temp
+
+# CMake build files (for MPLAB X with CMake)
+CMakeCache.txt
+CMakeFiles/
+cmake_install.cmake
+compile_commands.json
+build.ninja
+.ninja_deps
+.ninja_log
+
+# Debugging files
+*.gdb
